--- a/README.org
+++ b/README.org
@@ -53,6 +53,11 @@ its content.
 
 ** Octubre 2023
 
+*** 04-Oct-23
++ [[https://arxiv.org/abs/2310.01916][Verified completeness in Henkin-style for intuitionistic propositional logic]]. ~ Huayu Guo, Dongheng Chen, Bruno Bentzen. #ITP #LeanProver #Logic #Math
++ [[https://arxiv.org/abs/2310.01998][A formalization of complete discrete valuation rings and local fields]]. ~ María Inés de Frutos-Fernández, Filippo Alberto Edoardo Nuccio, Mortarino Majno Di Capriglio. #ITP #LeanProver #Math
++ [[https://arxiv.org/abs/2310.01714][Large language models as analogical reasoners]]. ~ Michihiro Yasunaga et als. #LLMs #Reasoning
+
 *** 03-Oct-23
 + [[https://github.com/JLimperg/regensburg-itp-school-2023][A taste of Lean 4]]. ~ Jannis Limperg. #ITP #Lean4 #Math
 + [[https://itp-school-2023.github.io/slides/slides_demoura.pdf][Lean 4: an extensible proof assistant and programming language]]. ~ Leonardo de Moura. #Lean4 #ITP #FunctionalProgramming
