--- a/README.org
+++ b/README.org
@@ -53,6 +53,13 @@ its content.
 
 ** Octubre 2023
 
+*** 05-Oct-23
++ [[https://lawrencecpaulson.github.io/2023/10/04/Ochigame.html][The concept of proof within the context of machine mathematics]]. ~ Lawrence C. Paulson (@lawrpaulson@bird.makeup).  #Philosophy #Math #ITP
++ [[https://unreasonableeffectiveness.com/learning-lean-4-as-a-programming-language-2-infinite-lists/][Learning Lean 4 as a programming language 2: Infinite lists]]. ~ Markus Schmaus. #Lean4 #FunctionalProgramming
++ [[https://unreasonableeffectiveness.com/learning-lean-4-as-a-programming-language-3-weak-sequences/][Learning Lean 4 as a programming language 3: Weak sequences]]. ~ Markus Schmaus. #Lean4 #FunctionalProgramming
++ [[https://arxiv.org/abs/2310.02896][Notes on a path to AI assistance in mathematical reasoning]]. ~ Alex Kontorovich. #AI #Math
++ [[https://cacm.acm.org/news/276994-ai-designs-new-robot-from-scratch-in-seconds/fulltext][AI designs new robot from scratch in seconds]]. #AI
+
 *** 04-Oct-23
 + [[https://arxiv.org/abs/2310.01916][Verified completeness in Henkin-style for intuitionistic propositional logic]]. ~ Huayu Guo, Dongheng Chen, Bruno Bentzen. #ITP #LeanProver #Logic #Math
 + [[https://arxiv.org/abs/2310.01998][A formalization of complete discrete valuation rings and local fields]]. ~ María Inés de Frutos-Fernández, Filippo Alberto Edoardo Nuccio, Mortarino Majno Di Capriglio. #ITP #LeanProver #Math
