--- a/README.org
+++ b/README.org
@@ -53,6 +53,9 @@ its content.
 
 ** Octubre 2023
 
+*** 24-Oct-23
++ [[https://arxiv.org/abs/2310.03640][Proof-theoretic methods in quantifier-free definability]]. ~ Zoltan A. Kocsis. #ITP #Agda #Logic #Math
+
 *** 23-Oct-23
 + [[https://github.com/MichaelStollBayreuth/Weights ITP][Formalization in Lean4 of some results in "Minimization of hypersurfaces" ~ A]].-S. Elsenhans and M. Stoll. #LeanProver #Math
 + [[https://github.com/dwrensha/compfiles][Catalog of math problems formalized in Lean]]. ~ David Renshaw et als. #ITP #LeanProver #Math #IMO
